--- a/src/css/ambianceControls.css
+++ b/src/css/ambianceControls.css
@@ -11,7 +11,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-color: rgba(100,100,100,0.6);
+    background-color: var(--main-background-color-transparency);
 }
 .progress-bar-volume:hover,
 .progress-bar-volume.touch-hover {
@@ -31,7 +31,7 @@
 .progress-bar-volume.minus:before {
     content: "";
     display: block;
-    background-color: white;
+    background-color: var(--main-text);
     height: 2px;
     width: 20px;
     position: absolute;
@@ -43,7 +43,7 @@
 .progress-bar-volume.plus:before {
     content: "";
     display: block;
-    background-color: white;
+    background-color: var(--main-text);
     height: 2px;
     width: 20px;
     position: absolute;
@@ -54,7 +54,7 @@
 .progress-bar-volume.plus:after {
     content: "";
     display: block;
-    background-color: white;
+    background-color: var(--main-text);
     height: 2px;
     width: 20px;
     position: absolute;
@@ -67,16 +67,16 @@
     position: relative;
     width: 100%;
     height: 100px;
-    background-color: #f44336;
+    background-color: var(--main-background-color);
     overflow: hidden;
     background-position: center;
     background-size: cover;
     border-radius: 5px;
-    border: 2px solid #ee951f;
+    border: 2px solid var(--main-border);
 }
 
 .ambiance-volume-bar {
-    background-color: rgba(76, 175, 80, 0.6);
+    background-color: var(--main-progressbar);
     width: 0%;
     height: 100%;
     transition: width 0.3s ease;
@@ -100,7 +100,7 @@
     text-align: center;
     padding: 5px 10px;
     color: black;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: var(--main-background-color-transparency);
     user-select: none;
     pointer-events: none;
 }
