--- a/src/css/credits.css
+++ b/src/css/credits.css
@@ -4,7 +4,7 @@
 }
 
 #background-music-Credit a {
-    color: #388497;
+    color: var(--link-color);
     margin-bottom: 0;
 }
 
@@ -23,8 +23,8 @@
 .credit-modal-template {
     top: 10px;
     right: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
+    background-color: var(--main-background-color-transparency);
+    color: var(--main-text);
     padding: 10px;
     border-radius: 5px;
 }
@@ -45,5 +45,5 @@
     width: 100%;
     height: 100%;
     padding: 20px;
-    background-color: #222;
+    background-color: var(--main-background-color);
 }
