--- a/src/css/dropDownMenu.css
+++ b/src/css/dropDownMenu.css
@@ -14,22 +14,8 @@
     position: absolute;
     top: 40px;
     right: 0;
-    background: white;
-    border: 1px solid #ccc;
+    background: var(--main-background-color-secondary);
     padding: 10px;
     z-index: 10;
     transition: all 0.3s;
-}
-
-.menu-content a,
-.menu-content button {
-    display: block;
-    padding: 8px 12px;
-    text-decoration: none;
-    color: black;
-}
-
-.menu-content a:hover,
-.menu-content button:hover {
-    background: #f1f1f1;
 }
