--- a/src/css/editSounds.css
+++ b/src/css/editSounds.css
@@ -5,22 +5,22 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #222;
+    background: var(--main-background-color);
     z-index: 1000;
     overflow-y: auto;
 }
 
 .edit-sound-modal .modal-header {
-    background-color: #222;
-    color: white;
+    background-color: var(--main-background-color);
+    color: var(--main-text);
     padding: 10px;
     text-align: center;
 }
 
 .edit-sound-modal .modal-body {
     padding: 20px;
-    background-color: #222;
-    color: #acacac;
+    background-color: var(--main-background-color);
+    color: var(--main-text);
     overflow-y: auto;
     display: flex;
     flex-direction: row;
@@ -30,40 +30,8 @@
 .sound-item {
     flex: 1;
     margin: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid  var(--main-text);
     padding: 10px;
     border-radius: 5px;
-    background-color: #222;
-}
-
-.sound-player-controls {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
-    position: relative;
-}
-
-.sound-player-controls button {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    background-color: transparent;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    z-index: 1;
-}
-
-.sound-player-controls button:hover {
-    background-color: #0056b3;
-}
-
-.sound-player-controls .icon {
-    font-size: 18px;
-    position: static;
-}
-
-.sound-player-controls input[type="range"] {
-    width: 100px;
+    background-color: var(--main-background-color);
 }
