--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -3,14 +3,14 @@ header {
     padding: 20px;
     text-align: center;
     position: relative;
-    color: #fff;
+    color: var(--main-text);
 }
 
 .header-content {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--main-background-color);
     border-radius: 8px;
     padding: 20px;
 }
@@ -19,14 +19,14 @@ nav {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #222;
+    background-color: var(--main-background-color);
     display: flex;
     justify-content: space-around;
     padding: 10px 0;
 }
 
 nav a {
-    color: white;
+    color:  var(--main-text);
     text-decoration: none;
     padding: 10px;
     display: block;
@@ -36,9 +36,9 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: BagnardSans, Arial, sans-serif;
-    background-color: #333;
-    color: #fff;
+    font-family: var(--fontfamilly);
+    background-color: var(--main-background-color-secondary);
+    color: var(--main-text);
 }
 
 a {
@@ -70,7 +70,7 @@ h2 {
 .status {
     margin-top: 10px;
     font-size: 0.9em;
-    color: #FFD700;
+    color: var(--main-text-info);
 }
 
 .center-content {
@@ -101,18 +101,25 @@ h2 {
 
 /* Footer styling */
 footer {
-    background-color: #444;
-    padding: 20px 0;
+    background-size: cover;
+    padding: 20px;
+    text-align: center;
+    position: relative;
+    color: var(--main-text);
 }
 
 .footer-content {
-    text-align: center;
-    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--main-background-color);
+    border-radius: 8px;
+    padding: 20px;
 }
 
 .footer-content a {
     margin: 0 15px;
-    color: white;
+    color:  var(--main-text);
     text-decoration: none;
 }
 
