--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -9,7 +9,7 @@
     --main-background-color-secondary: #333333;
     --main-background-color-transparency: rgba(100, 100, 100, 0.6);
     --main-border: #ee951f; /* Gold color for visibility */
-    --main-text: #ffffff;
+    --main-text: #e2e2e2;
     --main-text-placeholder : #a8a8a8;
     --main-text-info: #FFD700;
     --link-color: #388497;
